--- a/CSS/fonts.css
+++ b/CSS/fonts.css
@@ -91,11 +91,11 @@
     padding-bottom: 1.6rem;
   }
 
-  .fonts {
+  /* .fonts {
     flex-direction: column;
     align-items: flex-start;
     gap: 1rem;
-  }
+  } */
 
   .font-name,
   .font-type {
